--- a/package.json
+++ b/package.json
@@ -3,14 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
+    "bootstrap-sass": "^3.3.7",
+    "dot-prop-immutable": "^1.3.1",
+    "js-cookie": "^2.1.4",
+    "lodash": "^4.17.4",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "prop-types": "^15.5.10",
     "react-redux": "^5.0.5",
+    "react-redux-toastr": "^7.1.0",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^4.0.8",
     "redux": "^3.7.0",
-    "bootstrap-sass": "^3.3.7"
+    "redux-form": "^7.0.3",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "toastr": "^2.1.2"
   },
   "devDependencies": {
     "node-sass-chokidar": "0.0.3",
@@ -21,7 +30,7 @@
     "build-css": "node-sass-chokidar src/ -o src/styles/dist/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/styles/dist/ --watch --recursive",
     "start-js": "react-scripts start",
-    "start": "PORT=3001 npm-run-all -p watch-css start-js",
+    "start": "PORT=3002 npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
