--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "bootstrap-sass": "^3.3.7",
     "dot-prop-immutable": "^1.3.1",
     "js-cookie": "^2.1.4",
+    "json-api-normalizer": "^0.4.1",
     "lodash": "^4.17.4",
+    "path-to-regexp": "^1.7.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-datepicker": "^0.52.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-redux-toastr": "^7.1.0",
