--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-cryptocoins": "^1.0.2",
     "react-datepicker": "^0.53.0",
     "react-dom": "^15.5.4",
+    "react-dropzone": "^4.1.3",
     "react-feather": "^1.0.4",
     "react-ga": "^2.2.0",
     "react-helmet": "^5.2.0",
