--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "to-do-react",
+  "name": "react-ready-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,17 +10,16 @@
     "data.maybe": "^1.2.2",
     "data.task": "^3.1.1",
     "dot-prop-immutable": "^1.3.1",
+    "lifecycle-connector": "^1.0.1",
+    "normalize-json-api": "0.1.0",
     "normalizr": "^3.2.3",
     "prop-types": "^15.5.10",
     "ramda": "^0.24.1",
     "react": "^15.5.4",
-    "react-cryptocoins": "^1.0.2",
-    "react-datepicker": "^0.53.0",
     "react-dom": "^15.5.4",
-    "react-dropzone": "^4.1.3",
+    "react-dropzone": "^4.2.1",
     "react-feather": "^1.0.4",
-    "react-ga": "^2.2.0",
-    "react-helmet": "^5.2.0",
+    "react-helmet": "^5.1.3",
     "react-ladda": "^5.0.7",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.2",
@@ -29,8 +28,7 @@
     "redux": "^3.7.0",
     "redux-form": "^6.6.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.1"
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "node-sass-chokidar": "0.0.3",
