--- a/package.json
+++ b/package.json
@@ -41,14 +41,20 @@
     "clean-webpack-plugin": "^0.1.16",
     "cross-env": "^5.1.0",
     "css-loader": "^0.28.7",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-15": "^1.0.5",
+    "enzyme-to-json": "^3.3.0",
     "eslint": "^4.6.1",
     "eslint-plugin-react": "^7.3.0",
+    "expect": "^22.1.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^4.0.0",
+    "jest": "^22.1.4",
     "node-sass": "^4.5.3",
     "react-hot-loader": "^3.0.0",
+    "react-test-renderer": "^15.4.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "sass-loader": "^6.0.6",
@@ -61,7 +67,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --open --progress --hot --history-api-fallback --config webpack.config.dev.js",
     "build": "cross-env NODE_ENV=production webpack --progress --config webpack.config.prod.js",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "jest --no-cache",
+    "test:watch": "npm run test -- --watch"
   }
 }
