--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
-    "bootstrap-sass": "^3.3.7",
+    "babel-preset-stage-2": "^6.24.1",
+    "bootstrap": "^3.3.7",
+    "bootstrap-loader": "^2.0.0-beta.12",
     "classnames": "^2.2.5",
     "compass-mixins": "^0.12.10",
     "data.maybe": "^1.2.2",
@@ -31,17 +33,41 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "node-sass-chokidar": "0.0.3",
-    "npm-run-all": "^4.0.2",
-    "react-scripts": "1.0.7"
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.1",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.16",
+    "cross-env": "^5.1.0",
+    "css-loader": "^0.28.7",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-15": "^1.0.5",
+    "enzyme-to-json": "^3.3.0",
+    "eslint": "^4.6.1",
+    "eslint-plugin-react": "^7.3.0",
+    "expect": "^22.1.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^1.1.6",
+    "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^4.0.0",
+    "jest": "^22.1.4",
+    "node-sass": "^4.5.3",
+    "react-hot-loader": "^3.0.0",
+    "react-test-renderer": "^15.4.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.6",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1",
+    "webpack-merge": "^4.1.0"
   },
   "scripts": {
-    "build-css": "node-sass-chokidar src/ -o src/styles/dist",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/styles/dist --watch --recursive",
-    "start-js": "react-scripts start",
-    "start": "PORT=3002 npm-run-all -p watch-css start-js",
-    "build": "npm run build-css && react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --open --progress --hot --history-api-fallback --config webpack.config.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --progress --config webpack.config.prod.js",
+    "test": "jest --no-cache",
+    "test:watch": "npm run test -- --watch"
   }
 }
