--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.12.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
@@ -49,16 +50,22 @@
     "eslint-plugin-react": "^7.3.0",
     "expect": "^22.1.0",
     "extract-text-webpack-plugin": "^3.0.0",
+    "fetch-mock": "^6.0.0",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^4.0.0",
     "jest": "^22.1.4",
+    "jest-localstorage-mock": "^2.2.0",
+    "moxios": "^0.4.0",
     "node-sass": "^4.5.3",
     "react-hot-loader": "^3.0.0",
     "react-test-renderer": "^15.4.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.1",
+    "redux-promise-middleware": "^5.0.0",
     "sass-loader": "^6.0.6",
+    "sinon": "^4.2.2",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.5.5",
